--- a/index.html
+++ b/index.html
@@ -52,5 +52,8 @@
       </section>
     </main>
   </div>
+  <footer>
+    Feito com <img src="assets/ph_heart-fill.svg" alt="Coração fofinho"> pela Rocketseat
+  </footer>
 </body>
 </html>
